--- a/index.html
+++ b/index.html
@@ -4,9 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+<section>
+    <div>
+        <button class="btn btn-outline-dark d-grid gap-2 col-6 mx-auto">new game</button>
+    </div>
+    <div class="row">
+        <div class="col-sm-6">
+        <div class="card">
+            <div class="card-body_one">
+            <h5 class="card-title">Player One</h5>
+            <p class="card-text">score $variable</p>
+            <a href="#" class="btn btn-primary">roll dice</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="card">
+            <div class="card-body_two">
+            <h5 class="card-title">Player Two</h5>
+            <p class="card-text">score $variable</p>
+            <a href="#" class="btn btn-primary">hold</a>
+            </div>
+        </div>
+    </div>
+</div>
+<nav>
+    <div class="container-fluid">
+        <div class="bl">
+        <span>score total player one</span>
+        </div>    
+        <div class="br">
+        <span>score total player two</span>
+        </div>
+        </div>
+</nav>  
+    <div class="container-fluid">
+        <div class="de d-grid gap-2 col-6 mx-auto">resultat du de</div>
+    </div> 
+</section>
+<script type="text/javascript" src="script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
