--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <section>
     <div>
         <button class="btn btn-outline-dark d-grid gap-2 col-6 mx-auto">new game</button>
-    </div>
+    </div><br>
     <div class="row">
         <div class="col-sm-6">
         <div class="card">
